tests/baselines/reference/constructorOverloads4.errors.txt
constructorOverloads4.ts(10,1): error TS2349: This expression is not callable.
  Type 'Function' has no call signatures.


==== constructorOverloads4.ts (1 errors) ====
    declare module M {    
        export class Function {
            constructor(...args: string[]);
        }
        export function Function(...args: any[]): any;
        export function Function(...args: string[]): Function;
    }
    
    
    (new M.Function("return 5"))();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'Function' has no call signatures.
    M.Function("yo");
    